--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_below="@id/icon"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="#C0C0C0"
+        android:background="#FFB90F"
         android:text="User Login"
         android:textColor="#000000" />
 
@@ -33,11 +33,12 @@
         android:layout_below="@id/userLogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="#C0C0C0"
+        android:background="#FFB90F"
         android:text="Professional Login"
         android:textColor="#000000"/>
 
     <TextView
+        android:id="@+id/registerhere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/professionalLogin"
