--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/iconimage"
-        android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon"/>
+        android:layout_marginTop="25dp"
+        android:src="@drawable/icon2" />
     <TextView
         android:id="@+id/text"
         android:layout_marginTop="30dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="30sp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="email"
+        android:hint="email"
         android:layout_below="@+id/text"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"
@@ -44,7 +44,7 @@
         android:layout_marginTop="30sp"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="password"
+        android:hint="password"
         android:layout_below="@+id/usermail"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"
@@ -53,9 +53,10 @@
         android:padding="20dp"
         android:inputType="textVisiblePassword" />
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_login"
         android:layout_below="@+id/password_user"
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:text="Log In"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
