--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
         android:layout_height="145dp"
         android:layout_centerInParent="true"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/icon" />
+        android:src="@drawable/icon2" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/userLogin"
+        android:id="@+id/Btn_userLogin"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/icon"
@@ -30,7 +30,7 @@
         android:id="@+id/professionalLogin"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/userLogin"
+        android:layout_below="@id/Btn_userLogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="#FFB90F"
