--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".login"
-    android:background="@color/black">
+    android:background="@drawable/trends_background">
 
     <ImageView
         android:id="@+id/iconimage"
@@ -63,5 +63,13 @@
         android:textSize="25sp"
         android:padding="10sp"
         android:background="#FFB90F"/>
+
+    <ProgressBar
+        android:id="@+id/progressLoad"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="600dp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
