--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -106,7 +106,7 @@
             android:id="@+id/btnfull_course"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Viewfullcourse"
+            android:text="Apply for Scholarship"
             android:background="@color/black"
             android:textColor="@color/white"/>
     </LinearLayout>
